Allow types to have a @module[kind=xxx] too